# mail-server

./: Cargo.toml  env-example.txt
src/: main.rs
src/services/: email_service.rs
src/templates/helpers/: generate_recovery_template.rs
