[package]
name = "mail-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.11"
lettre_email = "0.9.4"
serde = "1.0"
dotenv = "0.15.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[build]
rustc-version = "1.75.0"